<resources>
    <string name="app_name">Slatki zalogaji</string>
    <string name="lozinka">Lozinka</string>
    <string name="korisnicko_ime">Korisničko ime</string>
    <string name="prijavi_se">Prijavi se</string>
    <string name="wellcome_message">Dobrodošli u poslastičarnicu\nSlatki zalogaji</string>
    <string name="contact_title">Dobrodošli u poslastičarnicu Slatki zalogaji, \n dom najizvrsnijih poslastica i deserata!</string>
    <string name="title_activity_promotions">Promotions</string>
    <string name="empty_basket_message">Vaša korpa je prazna!</string>
    <string name="address">Bulevar kralja Aleksandra 198,
        Beograd 11000</string>
    <string name="email">slatkizalogaji@gmail.com</string>
    <string name="phone">+38162859754</string>
    <string name="contact_info">Kontakt informacije</string>
    <string name="sunday_hours">ne radimo</string>
    <string name="sunday">Nedelja</string>
    <string name="saturday_hours">10:00h - 18:00h</string>
    <string name="saturday">Subota</string>
    <string name="monday_friday_hours">09:00h - 20:00h</string>
    <string name="monday_friday">Ponedeljak - Petak</string>
    <string name="working_hours">Radno vreme</string>
    <string name="name_label">Ime:</string>
    <string name="edit_details">Izmeni podatke</string>
    <string name="edit_password">Promeni lozinku</string>
    <string name="lastname_label">Prezime:</string>
    <string name="username_label">Korisničko ime:</string>
    <string name="address_label">Adresa:</string>
    <string name="phone_label">Kontakt telefon:</string>
    <string name="email_label">Email adresa:</string>
    <string name="ingredients">Sastojci</string>
    <string name="price">Cena</string>
    <string name="quantity">Količina</string>
    <string name="add_to_basket">Dodaj u korpu</string>
    <string name="comments">Komentari</string>
    <string name="leave_a_comment">Ostavi komentar</string>
    <string name="post">Postavi</string>
    <string name="delivery_info">Podaci o dostavi</string>
    <string name="purchase">Potvrdi porudžbinu</string>
    <string name="purchase_details">Detalji porudžbine</string>
    <string name="total_price">Ukupna cena: %1$s rsd</string>
    <string name="buyer">Kupac: %1$s %2$s</string>
    <string name="buyer_address">Adresa: %1$s %2$s, %3$s</string>
    <string name="buyer_phone">Kontakt telefon: %1$s</string>
    <string name="purchase_date">Porudžbina %1$s</string>
    <string name="edit_data_not_provided_error_message">Potrebno je uneti sve tražene podatke</string>
    <string name="current_password_incorrect_message">Trenutna lozinka nije tačna</string>
    <string name="passwords_dont_match_message">Lozinke se ne podudaraju</string>
    <string name="password_contains_characters_message">Lozinka mora sadržati bar jedno veliko slovo, jedan specijalan karakter i jednu cifru</string>
    <string name="password_change_error">Greška prilikom promene lozinke</string>
    <string name="password_length_error"> "Lozinka mora sadržati bar 8 karaktera"</string>
    <string name="password_one_upper_case_error">Lozinka mora sadržati bar jedno veliko slovo</string>
    <string name="password_one_special_character_error">Lozinka mora sadržati bar jedan specijalni karakter</string>
    <string name="password_one_number_error">Lozinka mora sadržati bar jedan broj</string>
    <string name="username_taken_message">Korisničko ime je zauzeto</string>
    <string name="address_format_message">Pogrešan format za adresu</string>
    <string name="phone_format_message">Pogrešan format e.g. 061123456</string>
    <string name="email_format_message">Pogrešan format za email</string>
    <string name="email_taken_message">Email adresa je zauzeta</string>
    <string name="data_change_error">Greška prilikom promene podataka</string>
    <string name="currency">%1$s din</string>
    <string name="username_password_message">Neophodno je uneti korisničko ime i lozinku</string>
    <string name="invalid_credentials">Uneti kredencijali nisu validni</string>
    <string name="successful_login">Prijava je uspešna!</string>
    <string name="login_error">Greška prilikom prijave</string>
    <string name="no_new_notifications">Nemate novih obaveštenja!</string>
    <string name="status_accepted">Vaša porudžbina kreirana %1$s je odobrena!</string>
    <string name="status_denied">Vaša porudžbina kreirana %1$s je odbijena.</string>
    <string name="product_price">Cena %1$s din</string>
    <string name="added_to_basket">Proizvod je uspešno dodat u korpu!</string>
    <string name="cakes">Torte</string>
    <string name="desserts">Kolači</string>
    <string name="address_format">%1$s %2$s, %3$s</string>
    <string name="cancel">Odustani</string>
    <string name="current_password">Trenutna lozinka</string>
    <string name="new_password">Nova lozinka</string>
    <string name="password_confirmation">Ponovljena nova lozinka</string>
    <string name="change_password_button">Promeni lozinku</string>
    <string name="password_changed_message">Lozinka je uspešno promenjena</string>
    <string name="city">Grad</string>
    <string name="street">Ulica</string>
    <string name="street_number">Broj ulice</string>
    <string name="phone_number">Telefon</string>
    <string name="save_changes">Sačuvaj izmene</string>
    <string name="name">Ime</string>
    <string name="lastname">Prezime</string>
    <string name="username">Korisničko ime</string>
    <string name="email_change_data">Email</string>
</resources>