<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profilebackground"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">
            <Button
                android:id="@+id/cancel_button"
                style="@style/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/cancel"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:id="@+id/message"
                    style="@style/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:visibility="visible"
                    app:layout_constraintLeft_toLeftOf="@id/currentpasswordLayout"
                    app:layout_constraintRight_toRightOf="@id/currentpasswordLayout"
                    app:layout_constraintBottom_toTopOf="@id/currentpasswordLayout"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/currentpasswordLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/message">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/currentpassword"
                        style="@style/input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/current_password"
                        android:inputType="textPassword"
                        android:visibility="visible" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newpasswordInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/currentpasswordLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newpassword"
                        style="@style/input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:visibility="visible" />

                    <ImageButton
                        android:id="@+id/togglenew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/password" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmpasswordInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newpasswordInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmpassword"
                        style="@style/input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_confirmation"
                        android:inputType="textPassword"
                        android:visibility="visible" />

                    <ImageButton
                        android:id="@+id/toggleconfirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/password" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/changepass"
                style="@style/loginbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/change_password_button"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />
        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>